welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:21: error: not found: value c
faireV(c);		 
       ^